Refactoring JDK12