@@ -1,8 +1,6 @@
 package ru.job4j;
 
 import java.util.List;
-import java.util.Arrays;
-import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.Iterator;
 
@@ -26,8 +24,6 @@ public class DirectoryOrganizationTest {
      */
     @Test
     public void whenArrayNameOrganizationThenCheckAllElement() {
-        List<String> list = new ArrayList<>();
-        List<String> checkList = new ArrayList<>();
         String one = "K1/SK1";
         String two = "K1/SK2";
         String three = "K1/SK1/SSK1";
@@ -37,15 +33,12 @@ public class DirectoryOrganizationTest {
         String seven = "K2/SK1/SSK2";
         String eight = "K2/SK1";
         String nine = "K1";
-        List<String> asLists = Arrays.asList(one, two, three, four, five, six, seven);
-        list = new LinkedList<>();
+        List<String> asLists = List.of(one, two, three, four, five, six, seven);
+        List<String> list = new LinkedList<>();
         list.addAll(asLists);
-        checkList.addAll(list);
-        checkList.add(eight);
-        checkList.add(nine);
+        List<String> checkList = List.of(one, two, three, four, five, six, seven, eight, nine);
         DirectoryOrganization dir = new DirectoryOrganization();
         list = dir.checkOrganization(list);
-
         boolean expect = true;
         boolean fact = false;
         if (list.containsAll(checkList)) {
@@ -60,7 +53,6 @@ public class DirectoryOrganizationTest {
     @Test
     public void whenArrayNameOrganizationThenSortArray() {
         int num = 0;
-
         String one = "K1/SK1";
         String two = "K1/SK2";
         String three = "K1/SK1/SSK1";
@@ -68,12 +60,11 @@ public class DirectoryOrganizationTest {
         String five = "K2";
         String six = "K2/SK1/SSK1";
         String seven = "K2/SK1/SSK2";
-
-        List<String> asLists = Arrays.asList(one, two, three, four, five, six, seven);
+        List<String> asLists = List.of(one, two, three, four, five, six, seven);
         List<String> list = new LinkedList<>();
         list.addAll(asLists);
 
-        List<String> checkListOne = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2",
+        List<String> checkListOne = List.of("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2",
                 "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2");
         DirectoryOrganization dir = new DirectoryOrganization();
         Iterator<String> checkIt = checkListOne.iterator();
@@ -99,7 +90,6 @@ public class DirectoryOrganizationTest {
     public void whenArrayNameOrganizationThenReverseSortArray() {
         List<String> list = new LinkedList<>();
         int num = 0;
-
         String one = "K1/SK1";
         String two = "K1/SK2";
         String three = "K1/SK1/SSK1";
@@ -108,9 +98,9 @@ public class DirectoryOrganizationTest {
         String six = "K2/SK1/SSK1";
         String seven = "K2/SK1/SSK2";
 
-        List<String> asLists = Arrays.asList(one, two, three, four, five, six, seven);
+        List<String> asLists = List.of(one, two, three, four, five, six, seven);
         list.addAll(asLists);
-        List<String> checkListOne = Arrays.asList("K2/SK1/SSK2", "K2/SK1/SSK1", "K2/SK1", "K2",
+        List<String> checkListOne = List.of("K2/SK1/SSK2", "K2/SK1/SSK1", "K2/SK1", "K2",
                 "K1/SK2", "K1/SK1/SSK2", "K1/SK1/SSK1", "K1/SK1", "K1");
         Iterator<String> checkIt = checkListOne.iterator();
         DirectoryOrganization dir = new DirectoryOrganization();
