@@ -3,7 +3,6 @@ package ru.job4j.convert_matrix_to_list;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.is;
@@ -25,7 +24,7 @@ public class ConverterMatrixTest {
     public void whenConvertingMultilevelArrayThenGetListNumbers() {
         Integer[][] arrayNumbers = {{1, 2, 3, 4}, {5, 6, 7, 8}};
         List<Integer> result = new ConverterMatrix().convert(arrayNumbers);
-        List<Integer> checking = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8);
+        List<Integer> checking = List.of(1, 2, 3, 4, 5, 6, 7, 8);
         Assert.assertThat(result, is(checking));
     }
 }
